--- a/README.org
+++ b/README.org
@@ -2,25 +2,27 @@
 
 These are the configuration files for my 'server', they're currently used on a raspberry pi.
 
+Go to a directory to get more info for anything.
+
 * Docker Compose
 I use docker compose for all the services I run on my server. You'll find my =docker-compose.yaml= files for the following services:
-| [[https://github.com/dani-garcia/bitwarden_rs][bitwardenrs]] | An implementation of the bitwarden server side in rust. It has all the premium features unlocked and is much more resource-friendly than it's offical, C# counterpart.                                                                                                                                                                                                                          |
-| [[https://github.com/gchq/CyberChef][cyberchef]]   | Providing all kinds of tools so you don't have to search for some random bloated website everytime you want to convert something to binary.                                                                                                                                                                                                                                                     |
-| [[https://github.com/go-gitea/gitea][gitea]]       | An open source alternative to github, gitlab, etc.                                                                                                                                                                                                                                                                                                                                              |
+| [[https://github.com/dani-garcia/bitwarden_rs][bitwardenrs]] | An implementation of the bitwarden server side in rust. It has all the premium features unlocked and is much more resource-friendly than it's official, C# counterpart.                                                                                                                                                                                                                         |
+| [[https://github.com/gchq/CyberChef][cyberchef]]   | Providing all kinds of tools so you don't have to search for some random bloated website every time you want to convert something to binary.                                                                                                                                                                                                                                                    |
+| [[https://github.com/go-gitea/gitea][gitea]]       | An open source alternative to github, gitlab, etc..                                                                                                                                                                                                                                                                                                                                             |
 | [[https://github.com/seejohnrun/haste-server][hastebin]]    | A simple but pretty pastebin.                                                                                                                                                                                                                                                                                                                                                                   |
-| [[https://github.com/jellyfin/jellyfin][jellyfin]]    | An open source media system. Basically the netflix for your local mp4 files. I use it to serve my dvd-rips of tv-shows and movies and such. It automatically downloads metadata, and keeps track of your progress on a per-account basis.                                                                                                                                                       |
-| [[https://github.com/matomo-org/matomo][matomo]]      | An open source web analytics platform. I set it up for testing purposes, but haven't really done anything with it since. It bascially provides you with data about how many people visit your web pages, what is the most popular sites, when people are visiting, and it can do much more.                                                                                                     |
-| [[https://github.com/miniflux/v2][miniflux]]    | A simple RSS feed reader. It allows me to sync my rss feed between multiple devices. It also has a few advances features (Which I don't use) and integration with multiple services such as wallabag.                                                                                                                                                                                           |
+| [[https://github.com/jellyfin/jellyfin][jellyfin]]    | An open source media system. Basically the netflix for your local mp4 files. I use it to serve my DVD-rips of TV-shows and movies and such. It automatically downloads metadata, and keeps track of your progress on a per-account basis.                                                                                                                                                       |
+| [[https://github.com/matomo-org/matomo][matomo]]      | An open source web analytics platform. I set it up for testing purposes, but haven't really done anything with it since. It basically provides you with data about how many people visit your web pages, what is the most popular sites, when people are visiting, and it can do much more.                                                                                                     |
+| [[https://github.com/miniflux/v2][miniflux]]    | A simple RSS feed reader. It allows me to sync my rss feed between multiple devices. It also has a few advanced features (Which I don't use) and integration with multiple services such as wallabag.                                                                                                                                                                                           |
 | [[https://github.com/nextcloud/server][nextcloud]]   | An open source alternative to google drive and the likes. It has tons of features and a big library of plugins. It allows you to sync your contacts and calendar from your phone, you can sync browser bookmarks, it has it's own password manager, integration with ONLYOFFICE, and tons of other features (I mostly just use it for file storage though, when syncthing wouldn't make sense). |
 
 * BIND
-I use a custom domain server, this allows for a few things:
+I use a custom domain server ([[https://gitlab.isc.org/isc-projects/bind9][BIND]]), this allows for a few things:
 - Faster times for resolving a domain, since the DNS server is on the local network.
 - Better privacy.
 - Custom domains for local network, for example I can access all the services running on my pi using =home.com=.
 
-Currently, only the =named.conf= is included, so subdomains are missing. They can be easily configured using =webmin= though.
+Currently, only the =named.conf= is included, so sub-domains are missing. They can be easily configured using =webmin= though.
 * NGINX
-NGINX is a reverse proxy, this is what is handling requests made to the server. It allows me to serve static files and more importantly use subdomains to refer to different ports.
+[[http://hg.nginx.org/nginx/][NGINX]] is a reverse proxy, this is what is handling requests made to the server. It allows me to serve static files and more importantly use sub-domains to refer to different ports.
 
-Included is the nginx.conf file, so the ssl certificates are (for obvious reasons) not included.
+Included is the nginx.conf file, so the SSL certificates are (for obvious reasons) not included.
